# python-datons

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  release-please-config.json
.agents/skills/esios-data/: SKILL.md
src/datons/: __init__.py  cli.py  client.py  config.py  exceptions.py
src/datons/esios/: __init__.py  manager.py  models.py
src/datons/esios_data/: __init__.py  manager.py  models.py
tests/: test_client.py
