[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datons"
version = "0.1.0"
description = "Python client for Datons data APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jesús López", email = "jesus.lopez@datons.com" },
]
keywords = ["datons", "energy", "esios", "electricity", "spain", "api", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://datons.com"
Documentation = "https://datons.com/apps/esios-data/docs"
Repository = "https://github.com/datons/python-datons"
Issues = "https://github.com/datons/python-datons/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/datons"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
